# chainring-contracts

./: .gitignore  LICENSE  Makefile  README.md  docker-compose-arch.yaml  docker-compose-ci-all.yaml  docker-compose-ci.yaml  docker-compose.yaml  start_containers.sh
.github/workflows/: ci.yml
arch/: .gitignore  Makefile  README.md
arch/arch_program/: Cargo.toml
arch/arch_program/src/: account.rs  lib.rs  program.rs  program_error.rs  program_stubs.rs  pubkey.rs  sol_secp256k1_recover.rs  system_instruction.rs
arch/arch_program/src/syscalls/: definitions.rs
arch/arch_sdk/: Cargo.toml
arch/arch_sdk/src/: constants.rs  error.rs  lib.rs  models.rs  processed_transaction.rs  runtime_transaction.rs
arch/arch_sdk/src/helper/: account.rs  arch_rpc.rs  bip322.rs  keys.rs  logging.rs  mod.rs  program_deployment.rs  transaction_building.rs  utxo.rs
arch/bip322/: Cargo.toml
arch/cli_tools/: Cargo.toml
arch/cli_tools/src/: main.rs
arch/common/: Cargo.toml
arch/common/src/: constants.rs  helper.rs  models.rs
arch/contracts/: Cargo.toml
arch/contracts/arch-data/: .gitignore
arch/contracts/common/: Cargo.toml
arch/contracts/common/src/: constants.rs  helper.rs  models.rs
arch/contracts/exchange/: Cargo.toml
arch/contracts/exchange/model/: Cargo.toml
arch/contracts/exchange/model/src/: error.rs  exchange.rs  instructions.rs  lib.rs  serialization.rs  state.rs
arch/contracts/exchange/program/: Cargo.toml
arch/contracts/exchange/program/src/: lib.rs  main.rs  models.rs  processor.rs
arch/contracts/exchange/shared/: Cargo.toml
arch/contracts/exchange/shared/src/: address.rs  bip322.rs  lib.rs  sig.rs
arch/contracts/exchange/src/: lib.rs
arch/data/: .gitignore  clear_state.sh
arch/program/: Cargo.toml
arch/program/src/: lib.rs
arch/scripts/: start_dkg.sh
arch/sdk/: Cargo.toml
arch/sdk/src/: runtime_transaction.rs
arch/testutils/: Cargo.toml
arch/testutils/src/: bitcoin.rs  constants.rs  lib.rs  ordclient.rs  runes.rs  setup.rs  utils.rs
coin-proxy/: Makefile  remappings.txt
coin-proxy/src/: CoinProxy.sol
coin-proxy/src/interfaces/: ICoinProxy.sol
coin-proxy/test/: CoinProxy.t.sol  CoinProxyBaseTest.sol
curve25519-dalek-3.2.1/src/: field.rs
docker/bitcoin/: Dockerfile
docker/bitcoin/bitcoin/: bitcoin.conf
docker/fulcrum/: Dockerfile  Makefile  entrypoint.sh  regtest.conf
docker/init/: Dockerfile  init.sh
docker/ord/: Dockerfile  Makefile  entrypoint.sh
evm/: Makefile  foundry.toml
evm/coin-proxy/: remappings.txt
evm/coin-proxy/src/: CoinProxy.sol
evm/coin-proxy/test/: CoinProxy.t.sol  CoinSettlement.t.sol
evm/coin-proxy/test/contracts/: CoinProxyUpgrade.sol
evm/exchange/: foundry.toml
evm/exchange/test/: ExchangeBaseTest.sol
evm/src/: Exchange.sol
evm/src/interfaces/: IExchange.sol  IVersion.sol
evm/test/: BatchSettlement.t.sol  Exchange.t.sol  ExchangeBaseTest.sol  SovereignWithdrawal.t.sol
evm/test/contracts/: ExchangeUpgrade.sol
script/: Exchange.s.sol
src/: Exchange.sol
src/common/: Constants.sol
src/interfaces/: IExchange.sol
test/: BatchSettlement.t.sol  Exchange.t.sol  ExchangeBaseTest.sol  SovereignWithdrawal.t.sol  TradeExecution.t.sol
test/contracts/: MockERC20.sol
test/utils/: SigUtils.sol
