[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
arch_program = { path = "../../program" }
sdk = { path = "../../sdk" }
hex = "0.4.3"
bitcoin = { version = "0.31.0", features = ["serde", "rand"] }
bitcoincore-rpc = "0.18.0"
sha256 = "1.5.0"
log = "0.4.22"
env_logger = "0.11.5"
lazy_static = "1.5.0"
ctor = { version = "0.2.8", features = [] }
model = { path = "model" }

[dev-dependencies]
serial_test = "3.1.1"
