[workspace]
[package]
name = "exchangeprogram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_program = { path = "../../../program" }
sha256 = "1.5.0"
bitcoin = { version = "0.32.4", features = ["serde"] }
bitcoin-io = "=0.1.2"
hex = { version = "0.4.3", default-features = false }
model = { path = "../model" }

[lib]
crate-type = ["cdylib", "lib"]
