[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../../../sdk" }
hex = { version = "0.4"}
chrono = "0.4.38"
sha2 = { version = "0.10.8", default-features = false }
ripemd = "0.1.3"
bech32 = "0.11.0"
base58 = "0.2.0"
num-bigint = "0.4.6"
num-traits = "0.2.18"
solana-secp256k1 = "0.1.2"
solana-secp256k1-schnorr = "0.2.2"
solana-nostd-secp256k1-recover = "0.1.1"

[dev-dependencies]
env_logger = "0.11.5"
base64 = { version = "0.22.1" }
log = "0.4.22"
